// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should generate the default markup 1`] = `
<ul class="radio-group">
  <li>
    <input id="radio-1-1" name="radio-group" value="Radio 1" type="radio" checked="">
    <label for="radio-1-1">Option 1</label>
  </li>
  <li>
    <input id="radio-1-2" name="radio-group" value="Radio 2" type="radio">
    <label for="radio-1-2">Option 2</label>
  </li>
  <li>
    <input id="radio-1-3" name="radio-group" value="Radio 3" type="radio">
    <label for="radio-1-3">Option 3</label>
  </li>
</ul>
`;

exports[`RadioGroup should render with inline style 1`] = `
<ul class="radio-group radio-group-inline">
  <li>
    <input id="radio-1-1" name="radio-group" value="Radio 1" type="radio" checked="">
    <label for="radio-1-1">Option 1</label>
  </li>
  <li>
    <input id="radio-1-2" name="radio-group" value="Radio 2" type="radio">
    <label for="radio-1-2">Option 2</label>
  </li>
  <li>
    <input id="radio-1-3" name="radio-group" value="Radio 3" type="radio">
    <label for="radio-1-3">Option 3</label>
  </li>
</ul>
`;
